--- a/mainPage.scss
+++ b/mainPage.scss
@@ -1,52 +1,485 @@
-$primary: #ffffff;
+$primary-bg: #ffffff;
 $secondary-bg: #F8F8F9;
+$primary-color: #000000;
 $secondary-color: #BF271B;
 
+@mixin display($main, $cross) {
+  display: flex;
+  justify-content: $main;
+  align-items: $cross;
+}
+
+@mixin font($size, $weight) {
+  font-size: $size + px;
+  font-weight: $weight;
+}
 
 body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: 'Raleway', sans-serif;
-  color: #000;
+  color: $primary-color;
   font-style: normal;
-  background: $primary;
+  background: $secondary-bg;
 }
 
-.main-banner {
+.banner {
   background: url("assets/bg.png") no-repeat;
   background-size: cover;
   height: 481px;
   border-radius: 0 0 20px 20px;
 }
 
-.main-banner__header {
+.banner__nav {
   position: relative;
   top: 31px;
   margin: 0 22px;
   border-radius: 12px;
-  background: $primary;
+  background: $primary-bg;
   opacity: 0.95;
   box-shadow: 0 0 20px 0 rgba(199, 199, 199, 0.16);
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  @include display(space-between, center);
 }
 
-.main-banner__logo {
+.banner__logo {
   margin: 20px;
   height: 26px;
 }
 
-.main-banner__list {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.banner__hero {
+  @include display(flex-end, center);
   gap: 30px;
-  list-style: none;
 }
 
-.main-banner__search {
+.banner__list {
+  @include display(center, center);
+  gap: 30px;
+  list-style: none;
+  padding: 0;
+
+  li a {
+    text-decoration: none;
+    color: $primary-color;
+    @include font(14, 500);
+    transition: color 0.3s;
+
+    &:hover {
+      color: $secondary-color;
+    }
+  }
+}
+
+.banner__search {
+  cursor: pointer;
   margin: 7px 10px;
   height: 54px;
+
+  &:active {
+    opacity: 0.8;
+  }
+}
+
+.banner__title {
+  margin: 112px 0 0 70px;
+  @include display(flex-start, flex-start);
+  flex-direction: column;
+  gap: 20px;
+  width: 587px;
+}
+
+.banner__breadcrumps {
+  margin: 0;
+  align-self: stretch;
+  @include font(14, 400);
+  opacity: 0.5;
+}
+
+.banner__text {
+  @include display(flex-start, flex-start);
+  flex-direction: column;
+  gap: 12px;
+}
+
+.banner__text1 {
+  margin: 0;
+  @include font(36, 700);
+}
+
+.banner__text2 {
+  margin: 0;
+  width: 420px;
+  @include font(16, 400);
+  line-height: 120%;
+}
+
+.banner__small {
+  position: absolute;
+  top: 350px;
+  right: 70px;
+  width: 418px;
+  height: 170px;
+  flex-shrink: 0;
+  border-radius: 12px;
+  background: $primary-bg;
+  @include display(flex-start, flex-end);
+  gap: 32px;
+}
+
+.banner__mockup {
+  height: 124px;
+}
+
+.banner__details {
+  align-self: center;
+  @include display(flex-start, flex-end);
+  flex-direction: column;
+  gap: 12px;
+}
+
+.banner__question {
+  margin: 0;
+  @include font(22, 700);
+  line-height: 120%;
+}
+
+.banner__btn {
+  @include display(flex-end, center);
+  gap: 8px;
+  cursor: pointer;
+
+  &:hover {
+    .banner__more a {
+      color: $secondary-color;
+    }
+
+    svg {
+      stroke: rgba(191, 39, 27, 0.5);
+    }
+  }
+}
+
+.banner__more {
+  margin: 0;
+  line-height: 140%;
+}
+
+.banner__more a {
+  color: #707070;
+  text-align: right;
+  @include font(16, 400);
+  letter-spacing: 0.3px;
+  text-decoration: none;
+}
+
+
+.calculator {
+  height: 630px;
+  padding: 58px 70px 80px;
+}
+
+.calculator__tab {
+  margin: 0;
+  display: inline-flex;
+  padding: 23px 36px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 12px 12px 0 0;
+  background: $primary-bg;
+  @include font(20, 700);
+}
+
+.calculator__main {
+  @include display(space-between, flex-start);
+  border-radius: 0 20px 20px 20px;
+  background: $primary-bg;
+}
+
+.calculator__form {
+  width: 470px;
+  @include display(flex-start, flex-start);
+  flex-direction: column;
+  gap: 10px;
+  margin: 20px 60px 38px 38px;
+
+  label {
+    @include font(12, 400);
+    line-height: 120%;
+    opacity: 0.5;
+  }
+
+  input {
+    width: 100%;
+  }
+}
+
+
+
+
+.about {
+  background: $primary-bg;
+  padding: 120px 0 120px 70px;
+}
+
+.about__main {
+  @include display(flex-start, flex-start);
+  flex-direction: column;
+  gap: 40px;
+}
+
+.about__topic {
+  @include display(flex-start, center);
+  gap: 30px;
+}
+
+.about__question {
+  margin: 0;
+  @include font(36, 700);
+  line-height: 110%;
+}
+
+.about__hero {
+  align-self: stretch;
+  @include display(space-between, flex-start);
+  gap: 20px;
+}
+
+.about__cards {
+  @include display(flex-start, center);
+  gap: 20px;
+  flex-wrap: wrap;
+}
+
+.about__card {
+  width: 308px;
+  height: 248px;
+  border-radius: 20px;
+  border: 1px solid rgba(0, 0, 0, 0.3);
+}
+
+.about__content {
+  margin: 10px 20px 24px;
+  @include display(flex-start, flex-start);
+  flex-direction: column;
+  gap: 20px;
+}
+
+.about__top {
+  align-self: stretch;
+  @include display(space-between, center);
+}
+
+.about__number {
+  flex: 1 0 0;
+  color: $secondary-color;
+  @include font(54, 700);
+  font-variant-numeric: lining-nums proportional-nums;
+  line-height: 140%;
+}
+
+.about__info {
+  @include display(flex-start, flex-start);
+  flex-direction: column;
+  gap: 4px;
+
+}
+
+.about__title {
+  @include font(20, 700);
+  font-variant-numeric: lining-nums proportional-nums;
+  line-height: 140%;
+}
+
+.about__text {
+  color: #605F5F;
+  @include font(14, 500);
+  font-variant-numeric: lining-nums proportional-nums;
+  line-height: 140%;
+}
+
+.about__more {
+  margin-left: 55px;
+  @include display(flex-start, center);
+  gap: 12px;
+  cursor: pointer;
+}
+
+.about__label {
+  margin: 0;
+}
+
+.about__label a {
+  @include font(16, 400);
+  color: $primary-color;
+  text-decoration: none;
+  opacity: 0.5;
+
+  &:hover {
+    color: $secondary-color;
+    opacity: 1;
+  }
+}
+
+.advantages {
+  background: $primary-bg;
+  padding: 0 70px 120px;
+}
+
+.advantages__hero {
+  background: $secondary-bg;
+  border-radius: 20px;
+  height: 453px;
+  @include display(space-between, center);
+  gap: 30px;
+}
+
+.advantages__circles {
+  height: 310px;
+}
+
+.advantages__text {
+  width: 512px;
+  margin-right: 130px;
+  @include display(flex-start, flex-start);
+  flex-direction: column;
+  gap: 37px;
+}
+
+.advantages__topic {
+  margin: 0;
+  @include font(36, 700);
+}
+
+.advantages__list {
+  margin: 0;
+  @include font(16, 400);
+  @include display(flex-start, flex-start);
+  flex-direction: column;
+  gap: 12px;
+}
+
+.advantages__line {
+  @include display(flex-start, flex-start);
+  gap: 14px;
+
+  img {
+    transform: translateY(100%);
+  }
+
+  p {
+    margin: 0;
+  }
+}
+
+.footer {
+  height: 280px;
+  border-radius: 20px 20px 0 0;
+  background: #2B2B2B;
+  padding: 70px 70px 85px;
+  color: $primary-bg;
+}
+
+.footer__hero {
+  @include display(space-between, flex-start);
+  gap: 30px;
+}
+
+.footer__main {
+  @include display(flex-start, flex-start);
+  gap: 65px;
+
+  img {
+    transform: translateY(-8%);
+  }
+}
+
+.footer__description {
+  @include display(flex-start, flex-start);
+  flex-direction: column;
+  gap: 14px;
+}
+
+.footer__text {
+  margin: 0;
+  width: 420px;
+  @include font(14, 400);
+  line-height: 140%;
+}
+
+.footer__menu {
+  @include display(flex-start, flex-start);
+  flex-direction: column;
+  gap: 21px;
+}
+
+.footer__topic {
+  margin: 0;
+  @include font(18, 700);
+  align-self: stretch;
+}
+
+.footer__list {
+  @include display(flex-start, flex-start);
+  gap: 70px;
+}
+
+.footer__list1, .footer__list2 {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  @include display(flex-start, flex-start);
+  flex-direction: column;
+  gap: 12px;
+
+  li {
+    height: 16px;
+
+    a {
+      @include font(14, 500);
+      color: $primary-bg;
+      text-decoration: none;
+      transition: color 0.3s;
+    }
+
+    a:hover {
+      color: $secondary-color;
+    }
+  }
+}
+
+.footer__more {
+  align-self: stretch;
+  @include display(space-between, flex-start);
+}
+
+.footer__contact {
+  @include display(flex-start, flex-start);
+  flex-direction: column;
+  gap: 21px;
+}
+
+.footer__title {
+  margin: 0;
+  @include font(18, 700);
+}
+
+.footer__address {
+  margin: 0;
+  @include font(14, 500);
+
+  a {
+    color: $primary-bg;
+    text-decoration: none;
+    transition: color 0.3s;
+  }
+  a:hover {
+    color: $secondary-color;
+  }
+}
+
+.footer__date {
+  align-self: flex-end;
+  padding-bottom: 90px;
+  @include font(14, 400);
+  line-height: 140%;
 }
